<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/readscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E6E3"
    android:clipToOutline="true">

    <View
        android:id="@+id/read_navrect"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="-1dp"
        android:background="#3C6255"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:id="@+id/read_roundedbg"
        android:layout_width="0dp"
        android:layout_height="662dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/proverbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-44sp"
        android:text="@string/proverbs"
        android:textAppearance="@style/proverbs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chapter_small_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/playfairdisplayregular"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-41sp"
        android:text="@string/chapter_small_read"
        android:textAlignment="center"
        android:textAppearance="@style/chapter_small_read"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintStart_toEndOf="@+id/proverbs"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chapter_big_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="167dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-57sp"
        android:text="@string/chapter_big_read"
        android:textAppearance="@style/chapter_big_read"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/read_verses"
        android:layout_width="246dp"
        android:layout_height="280dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/lorem_ipsum"
        android:textAppearance="@style/verses_read"
        app:layout_constraintStart_toEndOf="@+id/chapter_big_read"
        app:layout_constraintTop_toBottomOf="@+id/proverbs" />

    <View
        android:id="@+id/ellipse_5"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/selected_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/read_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/book_selected" />

    <ImageView
        android:id="@+id/read_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/read_book"
        app:srcCompat="@drawable/audio_unselected" />

    <ImageView
        android:id="@+id/read_vot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/read_audio"
        app:srcCompat="@drawable/sunrise_unselected" />

    <ImageView
        android:id="@+id/read_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/read_vot"
        app:srcCompat="@drawable/search_unselected" />

    <ImageView
        android:id="@+id/read_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintStart_toEndOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/read_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
        app:layout_constraintEnd_toStartOf="@+id/rectangle_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_3"
        app:srcCompat="@drawable/previous" />
</androidx.constraintlayout.widget.ConstraintLayout>